# fractals

./: Makefile  README.md  README.txt  fractals.py  pyproject.toml  setup.cfg
pyfractals/: fractals.py
regression/: test_fractals.py
tests/: test_fractals.py
