[tool.poetry]
name = "pyfractals"
version = "0.1.0"
description = "Create fractal gifs"
authors = ["d1618033 <d1618033@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
flake8 = "^3.7.9"
pylint = "^2.4.4"
mypy = "^0.761"
black = "^19.10b0"
isort = "^4.3.21"
unify = "^0.5"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
